@@ -76,19 +76,17 @@ module ActiveRecord
         end
       end
 
+      # Check to see if the method is defined in the model or any of it's subclasses that also derive from ActiveRecord.
+      # Raise DangerousAttributeError if the method is defined by ActiveRecord though.
       def instance_method_already_implemented?(method_name)
-        if method_defined?(method_name) || private_method_defined?(method_name) || protected_method_defined?(method_name)
-          # method is defined but maybe its a simple Kernel:: method which we could simply override
-          @@_overrideable_kernel_methods ||= Set.new(Kernel.methods)
-          !@@_overrideable_kernel_methods.include?(method_name)
-        else
-          false
-        end
+        return true if method_name =~ /^id(=$|\?$|$)/
+        @_defined_class_methods         ||= Set.new(ancestors.first(ancestors.index(ActiveRecord::Base)).collect! { |m| m.public_instance_methods(false) | m.private_instance_methods(false) | m.protected_instance_methods(false) }.flatten)
+        @@_defined_activerecord_methods ||= Set.new(ActiveRecord::Base.public_instance_methods(false) | ActiveRecord::Base.private_instance_methods(false) | ActiveRecord::Base.protected_instance_methods(false))
+        raise DangerousAttributeError, "#{method_name} is defined by ActiveRecord" if @@_defined_activerecord_methods.include?(method_name)
+        @_defined_class_methods.include?(method_name)
       end
       
       alias :define_read_methods :define_attribute_methods
-
-
 
       private
         # Suffixes a, ?, c become regexp /(a|\?|c)$/
