@@ -53,6 +53,43 @@ class AttributeMethodsTest < Test::Unit::TestCase
     topic = Topic.create("content" => myobj)
     topic.freeze
     assert_equal myobj, topic.content
-    
+  end
+  
+  def test_kernel_methods_not_implemented_in_activerecord
+    %w(test name display y).each do |method|
+      assert_equal false, ActiveRecord::Base.instance_method_already_implemented?(method), "##{method} is defined"
+    end
+  end
+  
+  def test_primary_key_implemented
+    assert_equal true, Class.new(ActiveRecord::Base).instance_method_already_implemented?('id')
+  end
+  
+  def test_defined_kernel_methods_implemented_in_model
+    %w(test name display y).each do |method|
+      klass = Class.new ActiveRecord::Base
+      klass.class_eval "def #{method}() 'defined #{method}' end"
+      assert_equal true, klass.instance_method_already_implemented?(method), "##{method} is not defined"
+    end
+  end
+  
+  def test_defined_kernel_methods_implemented_in_model_abstract_subclass
+    %w(test name display y).each do |method|
+      abstract = Class.new ActiveRecord::Base
+      abstract.class_eval "def #{method}() 'defined #{method}' end"
+      abstract.abstract_class = true
+      klass = Class.new abstract
+      assert_equal true, klass.instance_method_already_implemented?(method), "##{method} is not defined"
+    end
+  end
+  
+  def test_raises_dangerous_attribute_error_when_defining_activerecord_method_in_model
+    %w(save create_or_update).each do |method|
+      klass = Class.new ActiveRecord::Base
+      klass.class_eval "def #{method}() 'defined #{method}' end"
+      assert_raises ActiveRecord::DangerousAttributeError do
+        klass.instance_method_already_implemented?(method)
+      end
+    end
   end
 end
